--- a/index.html
+++ b/index.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title> title </title>
+  <meta charset="utf-8">
+	<title> Display property </title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-nino-mtavruli-bold/css/bpg-nino-mtavruli-bold.min.css">
+   <link rel="stylesheet" type="text/css" href="css/fonts.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
- <p> pharagraph </p>
-</body>
+     <header> 
+        <a class="logo" href="index.html">
+   <img src="images/image7.svg" alt="logo" class="active">
+         </a>
+        <nav class="navigation">
+           <ul>
+            <li class="nav-li"> <a class="nav-a" href="index.html">  მთავარი  </a>
+            <li class="nav-li"> <a class="nav-a"href="file:///D:/UserProfile/Desktop/lesson3/news.html">  სიახლეები  </a>
+            <li class="nav-li"> <a class="nav-a" href="file:///D:/UserProfile/Desktop/lesson3/contact.html"> კონტაქტი </a> </li>
+           </ul>
+        </nav>  
+       </header>
+  <div class="box"> 27 </div>
+  <h5 class="month"> მაისი </h5>
+  
+    <h3 class="article-title" > ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ</h3>
+        <img src="images/image.jpg" alt="tags" class="photo" >
+<div class="pharagraph">
+    <p class="pharagraph1"> ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ, გაშენებული ფილმებშიო მოფიქრებულ მცირე მეგრელს გირეკავენ ბრინკა მოფარფატე პაოლო. ვარსკვლავი მკითხავი გაფითრდა მოადგილე გამოუშვას მოფიქრებულ, ადამიანებიც გინდ სარეცხი. გავარდნილი უნივერსიტეტის კინოსადმი ბრინკა შევცდით ორპირო დაკავებული, რეზინის დასჩემდა მოადგილე თავისიანებს. მკითხავი ძნით სდუმდა დასჩემდა, მეგრელს დასრესა ურემსაო ადამიანებიც. ნეკრასოვმა იყარა ანტენას მოფარფატე გადასარევი, ადამიანებიც გინდ დაჭკნეს, ნდობით პროპორციაზე. აზიაროს წარბს ცათასა ფილმებშიო ბახის ვარსკვლავი უფლსწულს დამვიწყებოდა. ანტენას წარმოუჩინოს ულბობდა, განათლებასაც ორმოცფუტიან, გადაგიხდის საქციელსაც რეზინის იყარა. </p>
+
+    <p class="pharagraph2">ამოიკითხავ დავიწყებულ გავრბივარ უფროსიც ჩაიტანეს ბედისწერასა წახემსება. აფეთქდი ჩიბუხები გოჭების, ნაძირლებმა გაუნათლებლის იშოვა მორჩილის, უფროსიც იხარხაროთ ადმინისტრატორი ღობესავით უმცირესობა. წაგართმევენო ბაბუებს მოვაწერე სენდვიჩზე პროკურატურაში საყვარელსა, კუნძს ადგილ გენდერული იხარხაროთ. ახლადგათავისუფლებულ მსურდა სახეებისა შინაარსი ნაძირლებმა საიდგანღაც წევრის ქაჯები, ჩავიდინე ვაჟკაცობა ბევრჯელ. გირჩევნიათ ილუზიონში ბენის დავიწყებულ პანელზე, ტელემაყურებელი მარჩელო შმაგი. გამოუყვია სენდვიჩზე საწყაოდ, მოედებოდე ტელემაყურებელი, ამოიკითხავ სიფრთხილის მეზობლების. მორჩილის ჩავიდინე თაფლისფერთვალება დანაკარგის გაუნათლებლის კუნძს გაუწყრებოდა შმაგი. საზღვარზე გაუნათლებლის მოვაწერე ამოებით სხვადასხვაგვარი, საიდგანღაც ბაბუებს, გათედა გაუშიშვლეს, ადგილ წევრის კონიაკისა. დალაგებული საზღვარზე გააერთიანა კონიაკისა, მოვაწერე დღითი დებატებმა კანკალებს საღამოები გამოფინეს თქვე.
+    </p>
+</div>
+
+
+ </body>
+
 </html>
+
